style.css
/* ... */
/* 

SMALL PHONES, LARGE SMARTPHONES 

*/

@media (max-width: 550px) {

   /* NAV */

   .nav__row {
       display: flex;
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
       text-align: center;
       padding: 8px;
    }
    .nav__main {
        max-width: 220px;
        margin: 0 auto;
    }
    .nav__logo {
        height: 25px;
        width: 25px;
    }
    .nav__title {
        font-size: 16px;
    }
    .nav__links {
        width: 100%;
        flex-wrap: wrap;
        justify-content: center;
        gap: 4px;
        padding: 6px 0;
    }
    .nav__link a {
        font-size: 11px;
    }

    /* HEADER */

    .header__container {
        height: auto;
        padding: 16px;
    }
    .header__row {
        height: auto;
        padding: 32px 16px;
    }
    .header__content {
        width: 100%;
        max-width: 500px;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 48px;
    }
    .profile__img {
        display: block;
        max-width: 200px;
        border: 2px solid #b6b6b6; /*light gray*/
        margin: 0 auto;
    }
    .header__text {
        width: 100%;
        max-width: 400px;
        text-align: center;
    }
    .header__title {
        font-size: 14px;
    }
    .header__title--span {
        font-size: 18px;
    }
    .header__description {
        font-size: 12px;
        padding-bottom: 20px;
    }
    .header__button {
        padding: 6px;
        font-size: 12px;
        margin: 16px auto 0 auto;
    }

    /* ABOUT */

    .about__container {
        height: auto;
        padding: 16px;
    }
    .about__row {
        display: flex;
        flex-direction: column;
        height: auto;
        padding: 32px 16px;
    }
    .about__description {
        max-width: 400px;
        margin-top: 32px;
    }
    .about__title {
        font-size: 22px;
    }
    .side-note {
        font-size: 16px;
    }
    .about__para {
        font-size: 12px;
    }
    .about__note {
        max-width: 270px;
        font-size: 12px;
    }
    .about__img--wrapper {
        display: block;
    }
    .about__img {
        width: 100px;
        border: 2px solid #b6b6b6; /*light gray*/
        margin-bottom: 36px;
    }
    .about__img--1 {
        transform: translateY(0px);
    }
    .about__img--3 {
        transform: translateY(0px);
    }

    /* EPISODES */

    .episodes__container {
        height: auto;
        padding: 16px;
    }
    .episodes__row {
        height: auto;
        padding: 24px 16px;
    }
    .episodes__title {
        text-align: center;
        flex-wrap: wrap;
        font-size: 24px;
        width: 100%;
        max-width: 270px;
        margin-bottom: 12px;
    }
    .episodes__description--content {
        font-size: 20px;
        margin: 8px;
    }
    .episodes__description {
        height: auto;
        margin-bottom: 16px;
    }
    .episodes__para {
        padding-bottom: 6px;
    }
    .episodes__link {
        font-size: 20px;
        height: 30px;
        width: 30px;
    }
    .episode__tiles {
        max-width: 500px;
        gap: 60px;
    }
    .episode__tile {
        width: 100px;
        padding: 8px;
    }
    .episode__number {
        font-size: 16px;
    }
    .episode__title {
        font-size: 12px;
    }

    /* CONTACT */

    .contact__title {
        font-size: 22px;
    }
    .contact__para {
        font-size: 16px;
    }
    .contact__input {
        font-size: 14px;
    }
    .contact__btn {
        font-size: 14px;
    }

    /* FOOTER */

    footer {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .footer__row {
        height: auto;
    }
    .footer__top {
        max-width: 550px;
    }
    .footer__note {
        font-size: 20px;
    }
    .footer__nav--links {
        font-size: 16px;
    }
    .footer__divider {
        height: 2px;
        width: 100%;
        max-width: 400px;
        margin: 24px;
    }
    .footer__bottom {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        max-width: 1000px;
        padding: 20px;
        flex-wrap: wrap;
        gap: 12px;
    }
    .footer__logo {
        box-sizing: border-box;
        height: 40px;
        width: 40px;
    }
    .footer__copyright {
        font-size: 12px;
        text-align: center;
    }
    .footer__social--links {
        display: flex;
        width: 100%;
        justify-content: center;
        gap: 8px;
        flex-shrink: 0;
    }
    .footer__social--link {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        width: 32px;
        height: 32px;
        border-radius: 50%;
        background-color: #ca6641; /*terracotta*/
        cursor: pointer;
        flex-shrink: 0;
    }
    .footer__social--link i {
        color: #f9e4bc; /*light cream*/
        font-size: 16px;
        padding: 6px 6px;
        flex-shrink: 0;
    }
}

